--- a/FreeMove_v2.0/src/ua/kas/freMove/FXML/Main.fxml
+++ b/FreeMove_v2.0/src/ua/kas/freMove/FXML/Main.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.kas.freMove.Controller_main">
    <children>
-      <Button layoutX="82.0" layoutY="178.0" mnemonicParsing="false" onMouseEntered="#setImg_odessa" onMouseExited="#dellImg" prefHeight="60.0" prefWidth="225.0" text="Одеса">
+      <Button layoutX="82.0" layoutY="178.0" mnemonicParsing="false" onAction="#odessa" onMouseEntered="#setImg_odessa" onMouseExited="#dellImg" prefHeight="60.0" prefWidth="225.0" text="Одеса">
          <font>
             <Font name="Times New Roman Bold Italic" size="24.0" />
          </font>
@@ -29,7 +29,7 @@
          </font>
       </Label>
       <ImageView fx:id="city_log" fitHeight="350.0" fitWidth="300.0" layoutX="368.0" layoutY="121.0" pickOnBounds="true" preserveRatio="true" rotate="6.3" />
-      <Label fx:id="hi_user" alignment="CENTER" layoutX="82.0" layoutY="399.0" prefHeight="60.0" prefWidth="225.0" wrapText="true">
+      <Label fx:id="hi_user" alignment="CENTER_RIGHT" layoutX="27.0" layoutY="401.0" prefHeight="60.0" prefWidth="225.0" wrapText="true">
          <font>
             <Font name="Times New Roman Bold Italic" size="14.0" />
          </font>
@@ -44,5 +44,6 @@
             <Font name="Times New Roman Bold Italic" size="14.0" />
          </font>
       </Button>
+      <Button fx:id="btn_message" layoutX="262.0" layoutY="415.0" mnemonicParsing="false" onAction="#chat" prefHeight="35.0" prefWidth="45.0" visible="false" />
    </children>
 </AnchorPane>
